# 2-Node-Replicated-Key-Value-Store

./: .gitignore  Makefile  README.md  a.out  mainClient
bench/: bench.cpp
client/: client.cpp
server/: kv_store.h  logger.h  server.cpp  thread_pool.h  wal.h
tests/: CMakeLists.txt  test_kv_store.cpp  test_thread_pool.cpp  test_wal.cpp
